# hand-jesture-recognition

./: .env  README.md  classifier.py  classifier_training.py  hand_detector.py  handpoints.py  logger.py  pyproject.toml  requirements.txt  sample.py  training_data_logger.py
examples/: app.py  csv_labeled_handpoints_store.py  train_classifier.py
lib/: __init__.py  hand_detector.py  hand_sign_logger.py  handpoints.py
lib/classifiers/: __init__.py  hand_sign_classifier.py  hand_sign_classifier_trainer.py
lib/detectors/: hand_detector.py
lib/loggers/: __init__.py  hand_sign_logger.py
lib/stores/: __init__.py  in_memory_labeled_handponts_store.py  labeled_handpoints_store.py  ndjson_labeled_handpoints_store.py
lib/types/: __init__.py  handpoints.py  labeled_handpoints.py
models/: hand_sign_classifier_weights.pth  labeled_hand_sign_dataset.csv  labeled_hand_sign_dataset.ndjson
